# TVB-NEST

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  Makefile.nix.dev  PYDANTIC_INTEGRATION_SUMMARY.md  README.nix.dev.md  docker-compose.dev.yml  flake.nix  nix-cache-gc.sh  nix.dev  pydantic_implementation_plan.md  pydantic_validation_example.py  pyproject.toml  pytest.ini  python_test_coordinator.py  simple_test_runner.py
example/analyse/: print_connectome.py
example/short_simulation/: parameter.json
example_results/builder_basic/: experiment_metadata.json
install/docker/: Nest_TVB_2.dockerfile
install/nix/: README.md  test_module_imports.py
nest_elephant_tvb/Nest/: simulation_Zerlaut.py
nest_elephant_tvb/Tvb/: simulation_Zerlaut.py
nest_elephant_tvb/Tvb/modify_tvb/: Zerlaut.py  (+1 more)
nest_elephant_tvb/orchestrator/: experiment_builder.py  parameters_manager.py  run_exploration.py
nest_elephant_tvb/translation/: nest_save_hist.py  transformer_tvb_nest.py  tvb_to_nest.py
tests/: test_input_nest_spike_multi.sh  test_input_nest_spike_multi_dict.sh
tests/config/: test_co_simulation.yaml  test_input_nest_current.yaml  test_input_nest_current_multi.yaml  test_input_nest_spike.yaml  test_input_nest_spike_dict.yaml  test_input_nest_spike_multi.yaml  test_input_nest_spike_multi_dict.yaml  test_nest_save.yaml  test_record_nest_spike.yaml  test_record_nest_spike_multi.yaml  test_translator_nest_to_tvb.yaml  test_translator_tvb_to_nest.yaml
tests/python_runners/: yaml_test_runner.py
tests/test_nest_file/: spikegenerator_mpi.py  step_current_generator_mpi_thread.py
(+27 files in other folders)
