[project]
name = "tvb-nest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.1.2",
    "elephant>=1.0.0",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "numba>=0.61.0",
    "numpy>=2.2",
    "pillow>=11.3.0",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "scipy>=1.16.1",
    "tvb-data>=3.0.0",
    "tvb-gdist>=2.9.2",
    "tvb-library>=2.10.0",
]
